cmake_minimum_required(VERSION 3.13)
project(onnxruntime_cpp)

set(ONNXRUNTIME_PATH "C:/onnxruntime/" CACHE PATH "onnxruntime path")

set(ONNXRUNTIME_KEY_FILE $CACHE{ONNXRUNTIME_PATH}/include/onnxruntime_cxx_api.h)
if(NOT EXISTS ${ONNXRUNTIME_KEY_FILE})
	message("invalid entry ONNXRUNTIME_PATH : " ${ONNXRUNTIME_PATH})
	message("can not find file: " ${ONNXRUNTIME_KEY_FILE})
	return()
endif()

set(DEBUG_OUTPUT_DIRECTORY ${ONNXRUNTIME_PATH}/lib)
set(RELEASE_OUTPUT_DIRECTORY ${ONNXRUNTIME_PATH}/lib)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${DEBUG_OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${DEBUG_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${DEBUG_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${RELEASE_OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${RELEASE_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${RELEASE_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${RELEASE_OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${RELEASE_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${RELEASE_OUTPUT_DIRECTORY})

set(CMAKE_DEBUG_POSTFIX _d)
#set(CMAKE_CXX_STANDARD 17)
include_directories(${ONNXRUNTIME_PATH}/include)
link_directories(${ONNXRUNTIME_PATH}/lib)
add_subdirectory(test)

